# Chimera

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: ProjectOptions.cmake
docs/architecture/: project_chimera.md
shaders/debug/: overlay_ps.hlsl  overlay_vs.hlsl  vis_depth.hlsl  vis_motion.hlsl
shaders/fg/: fi_blend.hlsl  fi_warp.hlsl  flow_estimate.hlsl  flow_median.hlsl  flow_prefilter.hlsl  flow_refine.hlsl
shaders/include/: common.hlsli  constants.hlsli
shaders/ml/: neural_sr_pass1.hlsl  neural_sr_pass2.hlsl
shaders/sr/: accumulate.hlsl  dilate_depth_motion.hlsl  lanczos_upscale.hlsl  reproject.hlsl  sharpen.hlsl
src/capture/: d3d12_capture.cpp  d3d12_capture.h
src/common/: log.cpp  log.h  result.h  ring_buffer.h  runtime_types.h  time.h
src/config/: config_loader.cpp  config_loader.h  config_types.h
src/d3d12/: device_context.cpp  device_context.h  sample_app_main.cpp  sample_scene.cpp  sample_scene.h  swap_chain_host.h
src/fg/: frame_interpolation.cpp  frame_interpolation.h
src/framegraph/: frame_graph.h  resource_pool.h
src/loader/: attach_session.cpp  attach_session.h  chimera_launcher_main.cpp  policy_gate.cpp  policy_gate.h  runtime_d3d12_overlay.cpp  runtime_d3d12_overlay.h  runtime_entry.cpp  runtime_hooks.cpp  runtime_hooks.h
src/ml/: neural_sr.cpp  neural_sr.h  neural_weights.h
src/ofa/: optical_flow.cpp  optical_flow.h
src/overlay/: overlay_renderer.cpp  overlay_renderer.h
src/pacing/: frame_pacer.cpp  frame_pacer.h
src/platform/win32/: process_utils.cpp  process_utils.h  timer.h
src/resource_inspection/: signal_inspector.cpp  signal_inspector.h
src/sr/: analytic_tsr.cpp  analytic_tsr.h  history.h
tests/image_quality/: image_quality_tests.cpp
tests/integration/: d3d12_harness_smoke.cpp
tests/unit/: confidence_tests.cpp  config_tests.cpp  policy_gate_tests.cpp  signal_inspector_tests.cpp
tools/benchmark/: benchmark_main.cpp
tools/capture_replay/: capture_replay_main.cpp
tools/dataset_gen/: dataset_gen_main.cpp
